# mindful-harness

./: .gitignore  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
docs/: index.html
examples/: founders_inbox.py  render_mind.py
src/mindful_harness/: __init__.py  cli.py  counter_adages.py  drift.py  hands.py  llm.py  mind.py  persistence.py  primitives.py  viz.py
tests/: test_cli.py  test_counter_adages.py  test_drift.py  test_hands.py  test_llm.py  test_mind.py  test_persistence.py  test_primitives.py  test_viz.py
