[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindful-harness"
version = "0.0.7"
description = "A mindful substrate for AI-native work, inspired by Ellen Langer's research on mindfulness."
authors = [{ name = "Philip Maymin" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]

[project.scripts]
mindful-harness = "mindful_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mindful_harness"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
