[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "mindful-harness"
version = "0.0.11"
description = "A mindful substrate for AI-native work, inspired by Ellen Langer's research on mindfulness."
authors = [{ name = "Philip Maymin" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.5,<1",
    "mypy>=1.0,<2",
]

[project.scripts]
mindful-harness = "mindful_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mindful_harness"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# LLM prompt strings and Mind summaries are paragraph-shaped; readability
# beats line length for these.
"src/mindful_harness/llm.py" = ["E501"]
# Sample firehose content in the demo is intentionally email-shaped.
"examples/founders_inbox.py" = ["E501"]
# Demo Mind has paragraph-shaped sample content.
"examples/render_mind.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
